--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+body {
+    height: 100vh; 
+    background-image: linear-gradient(rgb(255, 255, 255), rgb(109, 39, 239));
+}
+
 .logo{
     display: block;
     margin: auto;
@@ -5,9 +10,17 @@
     height: 50px;
 }
 
+h1{
+    margin-top: 12px;
+    font-size: 30px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-align: center;
+}
+
 .container{
     max-width: 955px;
     border: 2px solid black;
+    border-radius: 13px;
     margin: auto;
     height: 60vh;
     padding: 33px;
@@ -38,25 +51,26 @@
     display: block;
     margin: auto;
     text-align: center;
-    max-width: 985px;
+    max-width: 1085px;
     width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #messageInp{
-    width: 92%;
+    width: 80%;
     border: 2px solid black;
     border-radius: 6px;
     height: 34px;
+    font-size: 22px;
 }
 
 .btn{
+    margin: 0 5px;
+    width: 9%;
     cursor: pointer;
     border: 2px solid black;
     border-radius: 6px;
     height: 34px;  
-}
-
-body {
-    height: 100vh; 
-    background-image: linear-gradient(rgb(255, 255, 255), rgb(125, 47, 125));
 }
